--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Letter Counter",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "node index.js"
   },
   "author": "Vince Richter",
   "license": "MIT"
